--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d dist --source-maps",
-    "start": "node dist/app.js",
+    "start": "node dist",
+    "babel": "babel-node src/app.js",
     "test": "mocha --compilers js:babel-register src/test",
-    "cover": "run build && node node_modules/.bin/isparta cover --root dist/test --report html node_modules/.bin/_mocha -- --recursive dist/test/**/*.js",
-    "cover2": "babel-node node_modules/.bin/isparta cover --root src/test --report html node_modules/.bin/_mocha -- --recursive src/test/**/*.js",
+    "cover": "npm run build && node node_modules/.bin/isparta cover --root dist/test --report html node_modules/.bin/_mocha -- --recursive dist/test/**/*.js",
     "lint": "eslint src",
     "format": "esformatter -i 'src/**/*.js'"
   },
