--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-cli": "^6.9.0",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-class-properties": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.7",
     "babel-register": "^6.9.0",
     "esformatter": "^0.9.3",
